# ambient-package-update

./: .gitignore  .pre-commit-config.yaml  CHANGES.md  CLAUDE.md  CONTRIBUTING.md  README.md  main.py  metadata.py  pyproject.toml  requirements.txt
.github/: release.yml
.github/workflows/: ci.yml  quality-gate.yml  release.yml
ambient_package_update/: __init__.py  cli.py
ambient_package_update/licenses/: MIT.md
ambient_package_update/metadata/: author.py  constants.py  executables.py  maintainer.py  package.py  readme.py  ruff_ignored_inspection.py
ambient_package_update/templates/: .coveragerc.tpl  .gitignore.tpl  .pre-commit-config.yaml.tpl  CONTRIBUTING.md.tpl  MANIFEST.in.tpl  README.md.tpl  Readme.md.tpl  SECURITY.md.tpl  pyproject.toml.tpl  setup.cfg.tpl
ambient_package_update/templates/.github/workflows/: ci.yml.tpl  quality-gate.yml.tpl  release.yml.tpl
ambient_package_update/templates/docs/: conf.py.tpl
ambient_package_update/templates/scripts/unix/: install_requirements.sh.tpl
ambient_package_update/templates/scripts/windows/: install_requirements.ps1.tpl
ambient_package_update/templates/snippets/: badges.tpl  content.tpl  contribute.tpl  installation.tpl  links.tpl  maintenance.tpl  publish.tpl  tagline.tpl
ambient_package_update/templates/snippets/licenses/: GPL.md  MIT.md
scripts/: setup_venv.ps1  setup_venv_unix.sh
scripts/unix/: setup_venv_unix.sh  update_all_package.sh
scripts/windows/: setup_venv.ps1
templates/: LICENSE.md.tpl  Readme.md.tpl  pyproject.toml.tpl
templates/.github/workflows/: ci.yml.tpl
templates/docs/: conf.py.tpl
